完善基础数据类型

--- a/js/2-数据类型.md
+++ b/js/2-数据类型.md
@@ -3,3 +3,19 @@
 js数据类型分为基础类型和对象类型以及俩特殊值，基础类型包括number, string, boolean三种，这三者都有自己的方法，但是由于是不可变量，所以不看做对象，什么是对象，对象就是可变键值对的集合，由于number, string, boolean不可变，所以这三不看做对象，俩特殊值指的是undefined, null，变量未定义，就对应undefined，null则是真正的奇葩，根本不知道咋来的，反正也没遇见过。使用typeof运算符，可以看见变量的所属类型，这也是我用的比较多的，检查元素类型。
 
 另外检查元素类型的还有instanceof运算符，后面再说。
+
+null和undefined是俩很令人疑惑的东西。
+
+null转为数字的时候值为0，而undefined转为数字的时候为NaN。null表示一个空的对象，undefined标出此处无定义的原始值。比如某个函数接收引擎抛出的错误作为参数，如果运行没有任何错误，那么引擎就可以抛出null。
+
+布尔值只有true和false两种值，而且js在预期某处需要布尔值的时候会将处于该位置的表达式转为布尔值，比如if后面的括号里面
+
+以下6中情况，js自动认为其为false，除此之外，全为true
+
+1. null
+2. undefined
+3. ""或者''
+4. 0
+5. NaN
+6. false
+
