--- a/js/1-基础语法.md
+++ b/js/1-基础语法.md
@@ -59,10 +59,11 @@ if(x){
 }else{
   return 2;
 }```
+
 更复杂的就不要用三元表达式了。
 
 
-当出现多个非嵌套的`if else`时，可以考虑使用switch语句，注意break的使用哦，否则可能造成分支逃逸。注意switch的常量部分可以使用表达式哦，但是注意switch不会发生类型的自动转化，比如1是不会自动转为true的。
+当出现多个非嵌套的`if else`时，可以考虑使用switch语句，注意break的使用，否则可能造成分支逃逸。注意switch的常量部分可以使用表达式，但是switch不会发生类型的自动转化，比如1是不会自动转为true的。
 
 js里面的循环有`for while do-while`，没啥可说的。
 
