--- a/groovy/getting-started/1.groovy的下载与安装.md
+++ b/groovy/getting-started/1.groovy的下载与安装.md
@@ -12,9 +12,9 @@
 * 从[Github](https://github.com/apache/groovy)上获取源码并安装其指示操作
 * Docker用户可以从[Docker Hub](https://hub.docker.com/_/groovy/)获取
 
-### 发行版(2018-12-15:23:06)
+### 发行版
 发行版意为源文件或者class文件的打包形式，可用于构建或者使用groovy。
 
-所有的Apache项目都提供了一个源码zip包，所有人都可以从这个源码包从零开始来构建相应的二进制发型版。如果对发行版有任何疑惑，都可以将源码包视作该发行版最权威的解答。官方也提供二进制的可下载的文档和SDK套件（二进制程序，文档，以及源码的结合体）。对于Windows用户，如果可能的话，你可能回找到一个适用于Windows的非Apache软件基金会（开发的）groovy安装程序。
+所有的Apache项目都提供了一个源码zip包，所有人都可以从这个源码包从零开始来构建相应的二进制发型版。如果对发行版有任何疑惑，都可以将源码包视作该发行版最权威的解答。官方也提供二进制的可下载的文档和SDK套件（二进制程序，文档，以及源码的结合体）。对于Windows用户，如果可能的话，你可能回找到一个适用于Windows的非Apache软件基金会（开发的）groovy安装程序。(2018-12-15-23:06)
 
 ### 验证
