解释Map 存取数据以及确保正确性的原理

--- a/thinking-in-java/java-collections/01-2-Map.md
+++ b/thinking-in-java/java-collections/01-2-Map.md
@@ -3,3 +3,16 @@
 * java.util.Map
 
 Java集合类的另外半边天，涵盖了ConcurrentMap, HashMap, TreeMap, HashTable等诸多网红级别实现。
+
+
+
+
+
+
+## 在Map中使用自定义Key时，需要重写Ojbect的hashCode和equals方法。
+
+HashMap在你往里面放<K, V>的时候，首先调用你的K的hasCode方法计算出你该进哪个坑，然后给你甩到那个坑里，如果这个坑里已经有人了，就把你放到人家的后面，相当于一个位置上排起了队，数据结构上是形成了链表，这个链表长度大于8的时候，就把链表转为红黑树，增强查找性能，这个过程可以总结为，调hashCode，找坑，入坑，坑里有人就排队，队列太长就上树。
+
+HashMap在取数据的时候，依然是要先调hashCode，找坑，然后去坑里找人，人很多，那就一个一个的认，怎么认？ 用equals来认。
+
+所以，当用Map而且K为自定义对象的时候，需要重写Object祖传的hashCode和equals方法，确保自己找坑顺利，认人也顺利。一旦没有重写这俩方法，或者说重写不当，怪异的事情就出现了。
