添加vim各个模式之间的常用转换图解

--- a/vim/01-模式.md
+++ b/vim/01-模式.md
@@ -2,6 +2,21 @@
 
 vim分visual模式，insert模式，normal模式以及command模式四种，不要想着去和这四种模型斗争，而是要与他们协同工作，就像我在stackoverflow上看到的某个解答：you should work with it, not against it.。
 
+
+一打开vim进入的就是normal模式，和其他模式的转化，用下图描述
+```
+                   打开vim
+                      |
+                      |
+
+visual  <== v ===  normal  === I/i A/i s ==> insert
+
+command <== : ===  normal  <==     esc   === insert
+
+```
+其实摸熟了之后，你都会忘记你是怎么在这些模式之间跳跃的，因为那时候已经是无意识的了。
+
+
 ## 重复
 
 * `.`可以重复上一次执行的命令，这个命令可以是从普通模式进入插入模式再返回普通模式过程中执行的所有操作。也可以是在普通模式下执行的命令操作，可以看做小型的宏。
