--- a/git/02-分支.md
+++ b/git/02-分支.md
@@ -1,3 +1,40 @@
 # 分支
 
 分支是git强大的杀手级特性，分支是十分的轻量的，git鼓励用户在工作流中频繁的使用分支与合并，这是git开发者必须精通的一个特性。
+
+git的分支，本质上是指向提交对象的可变指针。git的默认分支名字是master，在多次提交操作之后，其实就已经拥有了一个指向最后提交对象的master分支，它会在每次的提交操作中自动向前移动。git的master分支和其他分支并没有任何区别，只不过是`git init`命令默认创建的分支就叫master，然后也没有什么人会去改分支的名字，仅此而已。
+
+一次提交，包含一个提交对象，提交对象里面有一个指向提交内容的指针，指向的内容是一个快照目录，快照里面包含着目录结构的tree对象，以及表示目录里面各个文件的的blob对象。结构如下
+![提交的对象以及结构](https://progit.bootcss.com/images/commit-and-tree.png)
+
+提交历史可以看做一个线性的队列，不断地在队列尾部加提交，然后分支就一直指向队尾的那个提交。
+
+
+如下，`git branch testing`创建了一个新的名为testing的分支，该分支本质是指向f30ab提交的一个指针。
+![创建分支](https://progit.bootcss.com/images/two-branches.png)
+
+注意，分支仅仅是一个指向提交的指针而已，标识用户当前在哪个分支上工作，是由另外一个特殊的指针决定的，那就是HEAD指针，可以将HEAD指针当做本地正在使用的分支的别名。
+![头指针确定当前正在使用的分支是哪个](https://progit.bootcss.com/images/head-to-master.png)
+`git checkout testing`即可切换到testing分支，切换之后的头指针指向testing，如下图
+
+![切换到testing分支](https://progit.bootcss.com/images/head-to-testing.png)
+
+此时我们目前在testing分支上，如果做一个新的提交的话，我们可以看到，提交仍然是线性的，testing分支指向了新的提交，然后HEAD指针指向testing分支。但是需要注意的是，master分支是没有动的，它还是指向原来它所在的提交。
+
+![在新的分支上做提交](https://progit.bootcss.com/images/advance-testing.png)
+
+接下来，我们将切回到master分支，然后，在master分支上形成一次提交，以便形成一个分叉，这将更直观的解释分支的含义。
+```
+$ #切回master分支
+$ git checkout master
+```
+![切回master](https://progit.bootcss.com/images/checkout-master.png)
+
+```
+$ # 在master分支上做一个提交，然后就会清晰地看到分支就像树一样分叉了
+$ git commit -m "blablabla"
+```
+![在master分支上做新的提交](https://progit.bootcss.com/images/advance-master.png)
+
+git的分支实际上只是包含对象校验和（长度为40的SHA-1值字符串）的文件，创建和销毁都很高效，创建一个新分支就相当于往一个文件中写入41个字节（40个字符和一个换行符）
+
