添加git分之合并的模板代码

--- a/git/02-分支.md
+++ b/git/02-分支.md
@@ -55,6 +55,14 @@ $ git checkout iss53
 
 在git中，分支在完成工作后，往往需要和主分支进行合并，此时切换到主分支，然后使用`git merge iss53`即可实现合并，合并分为快进合并和非快进合并，当合并的两个分支满足从某一个分支能走到另一个分支的时候，合并此两个分支仅仅需要把指针移动到要合并的那个点就行，就是所谓的快进合并（fast forward），否则就是就需要进行三方合并，即要合并的两个分支指向的提交，以及这两个提交的父提交（可能不是直接父提交，这个由git决定）。
 
+```
+$ # 一般来说，要合并两个分支，首先需要确定将谁合并到谁
+$ # 比如，将hotfix分支合并到master分支，就需要先确定自己目前是在master分支
+$ # 然后使用merge将hotfix合并到master上
+$ git checkout master
+$ git merge hotfix
+```
+
 下面这个图就是典型的快进合并，将master和hotfix合并的时候，由于能从master直接走到hotfix，所以合并的时候，直接将master的指针移动到hotfix的提交就行。
 
 ![快进合并](https://progit.bootcss.com/images/basic-branching-4.png)
