添加分支管理的相关命令

--- a/git/02-分支.md
+++ b/git/02-分支.md
@@ -81,3 +81,11 @@ $ git merge hotfix
 ![三方合并完成](https://progit.bootcss.com/images/basic-merging-2.png)
 
 
+**分支的相关管理命令**
+
+```
+$ # 查看有哪些分支, 可以加很多选项, 比如 -v 显示分支的最后一次提交, --merged显示合并到当前分支的分支, --no-merged则相反
+$ git branch
+
+$ # git branch -d可以删除某个分支
+```
