--- a/vim/01-模式.md
+++ b/vim/01-模式.md
@@ -25,11 +25,11 @@ command <== : ===  normal  <==     esc   === insert
 
 ## 普通模式下的技巧
 
-**算术增减**
+**¶ 算术增减**
 
 比如，要让一个数字进行加减某个指定的值，只需要在普通模式下键入`数字<C-a> 或者 数字<C-x>`即可对当前的数字或者后面的第一个数字做加减。比如对`h10`执行`100<C-x>就会变成`h-90`，执行`100<C-a>`就会变成`h110`。
 
-**操作符简单介绍**
+**¶ 操作符简单介绍**
 
 在普通模式下，操作符 + 动作命令 = 操作，下面介绍vim的操作符
 
@@ -48,27 +48,29 @@ command <== : ===  normal  <==     esc   === insert
 
 操作符后面的动作命令可以是文本对象，比如aw代表一个单词，ap代表一个段落，以后只要学会更多的动作命令，就可以和这些操作符发生很多的化学反应。vim一个操作符命令连续调用两次的时候，就会作用到当前行.
 
-**替换字符**
+**¶ 替换字符**
 
 在普通模式下, 输入R进入逐字体换的操作, r进入单次替换操作.
+
 ## 插入模式下的技巧
 
-**快速删除**
+**¶ 快速删除**
 
-在插入模式下, 如果出现输入错误的情况, 有一些可以快速删除内容操作. <C-h>会删除前一个字符,相当于backspace, <C-w>会删除前一个单词, <C-u>可以一只删除,删到行首,而且这些可以应用在bash中.
+在插入模式下, 如果出现输入错误的情况, 有一些可以快速删除内容操作. `<C-h>`会删除前一个字符,相当于backspace, `<C-w>`会删除前一个单词, `<C-u>`可以一直删除,删到行首,而且这些可以应用在bash中.
 
-**回退到普通模式**
+**¶ 回退到普通模式**
 
 在插入模式下,如果想回到普通模式, 可以使用esc键或者<C-[>
 
-**特殊的插入普通模式**
+**¶ 特殊的插入普通模式**
 
-在插入模式下, 可以通过<C-o>进入一个插入-普通模式,这个操作允许执行一个普通模式下的命令,然后继续返回到插入模式下. 比如,可以在插入模式下使用`<C-o>zz`来进入插入普通模式,然后zz命令会重绘屏幕,将光标处的内容移到屏幕正中. 比如在你写代码的时候,写到底,然后光标一直就在屏幕底部,这看起来并不太爽, 此时,将光标处的代码移动到屏幕正中就很舒服.
+在插入模式下, 可以通过<C-o>进入一个插入-普通模式,这个操作允许执行一个普通模式下的命令,然后继续返回到插入模式下. 比如,可以在插入模式下使用`<C-o>zz`来进入插入普通模式,然后zz命令会重绘屏幕,将光标处的内容移到屏幕正中(但是如果只有几行，那么可能不会给你移动到正中央). 比如在你写代码的时候,写到底,然后光标一直就在屏幕底部,这看起来并不太爽, 此时,将光标处的代码移动到屏幕正中就很舒服.
 
-**访问寄存器**
+**¶ 访问寄存器**
 
 `<C-r>{register}`可以在插入模式下访问寄存器的内容并将其插入光标处, 这就是在插入模式下的粘贴, 另外, 在插入模式下, 通过`<C-r>=`来访问运算寄存器, 然后键入算术表达式,运算完成后, 结果会放入光标处.
 
-**输入一些特殊的字符**
+
+**¶ 输入一些特殊的字符**
 
 `§ £ ¶ π ξ `这些字符一般不好输入, 而这里能输入这些的原因就是这里采用了vim里面的二合字符, 来输入了这些特殊的字符, 使用`<C-k>{char1}{char2}`来输入一个二合字符, 比如`<C-k>p*`将输入`π `, 具体的二合代码表,可以在vim中输入`:h digraphs-default` 来获取.
