更新02-分支远程分支

--- a/git/02-分支.md
+++ b/git/02-分支.md
@@ -89,3 +89,8 @@ $ git branch
 
 $ # git branch -d可以删除某个分支
 ```
+
+## 远程分支
+远程分支是对远程仓库的引用（指针），包括分支或者标签等，在本地仓库可见，但是不能移动，它代表着远程分支所指向的提交。
+
+git中，本地分支是我们开展工作的分支，但是工作开展完了，需要推送到远层仓库的时候，就需要和远程仓库做交互了，需要为本地分支创建一个上游，这样在推送的时候就知道本地分支该送到远程的哪个分支了。
