docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -86,3 +86,10 @@ button.addActionListener(new ActionListener() {
 
 上面的代码里面，匿名类就是一串代码，他是被当做参数传递给addActionListener方法，这就是代码即数据。
 
+## 函数式接口是什么
+
+函数式接口是只有一个抽象方法的接口，用作lambda表达式的类型。
+
+方法的参数类型如果是一个函数式接口，那么在实际调用这个方法的时候，就可以传入一个与对应函数式接口唯一抽象方法相匹配的lambda表达式。
+
+函数式接口大多数出现在java.util.function这个包下面，可以看到所有的函数式接口都只有一个抽象方法，当然，这个抽象方法可能在父级接口那里。
