--- a/design-pattern/01.单例模式.md
+++ b/design-pattern/01.单例模式.md
@@ -22,7 +22,7 @@
 
 ## 单例的实现方式
 
-单例的实现方式众多，典型的有饿汉式单例、懒汉式单例、双重检查锁、静态内部类式以及枚举式单例单例。
+单例的实现方式众多，典型的有饿汉式单例、懒汉式单例、双重检查锁、静态内部类式以及枚举式单例。
 
 ### 饿汉式单例
 
@@ -45,7 +45,7 @@ public class Singleton {
 
 ### 懒汉式单例
 
-之所以成为懒汉，是要在调用提供实例的时候才初始化这个单例的实例。
+之所以成为懒汉，是要在调用提供实例的方法的时候才初始化这个单例的实例。优点是需要的时候才加载，缺点是锁导致的性能问题。
 
 ```java
 public class Singleton {
