docs: 添加单例模式的安全性一节

--- a/design-pattern/01-单例模式.md
+++ b/design-pattern/01-单例模式.md
@@ -139,3 +139,15 @@ public enum Singleton {
 ```
 
 要获取枚举的单例，只需要Singleton.INSTANCE即可。一般网上写的单例都没写枚举里面的方法，但是枚举里面的方法才是最重要的，是对应单例的操作和状态。
+
+
+### 单例的安全问题
+
+安全问题主要是两点
+
+1. 多线程访问
+2. 反射
+
+上面写的单例都可以抗住多线程，要么用锁要么用了其静态的特性，要么利用了枚举天生单例，但是里面除了枚举，全都扛不住反射。
+
+反射可以把private的构造器改为可访问的，然后就可以调用newInstance来获取对象了，但是枚举就可以避免反射的干扰，因为在调newInstance的时候会抛异常，知道有这个事情就可以了，至于解决，可以通过在普通构造器里面判断一个标志位来解决，如果二次调用了构造器，就抛异常即可。
