feat: 添加各种单例模式的实现和唯一性的测试

--- a/design-pattern/01-单例模式.md
+++ b/design-pattern/01-单例模式.md
@@ -151,3 +151,138 @@ public enum Singleton {
 上面写的单例都可以抗住多线程，要么用锁要么用了其静态的特性，要么利用了枚举天生单例，但是里面除了枚举，全都扛不住反射。
 
 反射可以把private的构造器改为可访问的，然后就可以调用newInstance来获取对象了，但是枚举就可以避免反射的干扰，因为在调newInstance的时候会抛异常，知道有这个事情就可以了，至于解决，可以通过在普通构造器里面判断一个标志位来解决，如果二次调用了构造器，就抛异常即可。
+
+### 一些单例的实现和唯一性的验证
+
+```java
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Set;
+
+public class Singletons {
+    public static void main(String... args) {
+        // 要使用线程安全的set，否则在add的时候可能会将相同实例放入的时候导致size和真正的元素个数不匹配
+        Set<Integer> hungrySingletonSet = Collections.synchronizedSet(new HashSet<>());
+        Set<Integer> lazySingletonSet = Collections.synchronizedSet(new HashSet<>());
+        Set<Integer> doubleCheckLockSingletonSet = Collections.synchronizedSet(new HashSet<>());
+        Set<Integer> innerStaticClassSingletonSet = Collections.synchronizedSet(new HashSet<>());
+        Set<Integer> enumSingletonSet = Collections.synchronizedSet(new HashSet<>());
+
+        // 开100个线程，每个线程都获取一次各个实现的单例的hashcode，将其放入对应的set中
+        // 最后的set的 元素个数应该全部是1
+        Thread[] threads = new Thread[100];
+
+        for (int i = 0; i < threads.length; i++) {
+            threads[i] = new Thread() {
+                @Override
+                public void run() {
+                    hungrySingletonSet.add(HungrySingleton.getInstance().hashCode());
+                    lazySingletonSet.add(LazySingleton.getInstance().hashCode());
+                    doubleCheckLockSingletonSet.add(DoubleCheckLockSingleton.getInstance().hashCode());
+                    innerStaticClassSingletonSet.add(InnerStaticClassSingleton.getInstance().hashCode());
+                    enumSingletonSet.add(EnumSingleton.INSTANCE.hashCode());
+                }
+            };
+        }
+
+        for (Thread thread : threads) thread.start();
+
+        // 一定要睡眠一段时间，保证另外的100个线程执行完毕，否则会导致还没有往set里面添加完毕元素主线程就打印结果并退出了
+        try {
+            Thread.sleep(4000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        System.out.println("hun: \t" + hungrySingletonSet.size());
+        System.out.println("lazy: \t" + lazySingletonSet.size());
+        System.out.println("dcl: \t" + doubleCheckLockSingletonSet.size());
+        System.out.println("inner: \t" + innerStaticClassSingletonSet.size());
+        System.out.println("enum: \t" + enumSingletonSet.size());
+    }
+}
+
+/**
+ * 饿汉式单例
+ */
+class HungrySingleton {
+    private static HungrySingleton instance = new HungrySingleton();
+
+    private HungrySingleton() {}
+
+    public static HungrySingleton getInstance() {
+        return instance;
+    }
+}
+
+/**
+ * 简单懒汉式单例
+ */
+class LazySingleton {
+    private static LazySingleton instance;
+
+    private LazySingleton() {}
+
+    public static synchronized LazySingleton getInstance() {
+        if (instance == null) {
+            instance = new LazySingleton();
+        }
+
+        return instance;
+    }
+}
+
+/**
+ * 双重检查锁式单例
+ */
+class DoubleCheckLockSingleton {
+    private static volatile DoubleCheckLockSingleton instance;
+
+    private DoubleCheckLockSingleton() {}
+
+    public static DoubleCheckLockSingleton getInstance() {
+        if (instance == null) {
+            synchronized (DoubleCheckLockSingleton.class) {
+                if (null == instance) {
+                    instance = new DoubleCheckLockSingleton();
+                }
+            }
+        }
+
+        return instance;
+    }
+}
+
+/**
+ * 静态内部类式单例
+ */
+class InnerStaticClassSingleton {
+    private static class SingletonHolder {
+        private static final InnerStaticClassSingleton instance = new InnerStaticClassSingleton();
+    }
+
+    private InnerStaticClassSingleton() {}
+
+    public static InnerStaticClassSingleton getInstance() {
+        return SingletonHolder.instance;
+    }
+}
+
+/**
+ * 枚举式单例
+ */
+enum EnumSingleton {
+    INSTANCE; // 这个INSTANCE就是唯一的实例，下面可以给这个实例添加变量和方法等
+
+    private int status = -1;
+
+    public void setStatus(int status) {
+        this.status = status;
+    }
+
+    public int getStatus() {
+        return status;
+    }
+}
+
+```
