docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -73,3 +73,16 @@ new Thread(() -> {
 上面的第二个代码的try写的地方很有讲究，如果将try写在while外面，那么在抛出异常的时候，就会跳到while之外执行，线程自然就退出了，但是需要搞清楚自己的需求，注意写法，因为写法实在是太多了。
 
 * [参考资料](https://www.cnblogs.com/onlywujun/p/3565082.html)
+
+## 代码即数据是什么意思
+
+```java
+button.addActionListener(new ActionListener() {
+    public void actionPerformed(ActionEvent event) {
+      System.out.println("button clicked."); // A
+    }
+})
+```
+
+上面的代码里面，匿名类就是一串代码，他是被当做参数传递给addActionListener方法，这就是代码即数据。
+
