docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -93,3 +93,9 @@ button.addActionListener(new ActionListener() {
 方法的参数类型如果是一个函数式接口，那么在实际调用这个方法的时候，就可以传入一个与对应函数式接口唯一抽象方法相匹配的lambda表达式。
 
 函数式接口大多数出现在java.util.function这个包下面，可以看到所有的函数式接口都只有一个抽象方法，当然，这个抽象方法可能在父级接口那里。
+
+## java 8里面的流是什么
+
+流就是流动的数据，可以对流里面的数据进行映射，筛选，收集等，流有一个接口, java.util.stream.Stream，这里面有很多的方法，包括map，filter等，还有一个收集方法collect，所有的方法可以分为两类，一是惰性求值方法，包括filter，map，flatMap等，二是及早求值方法，包括count，collect等
+
+流属于集合的内部迭代，是产生结果的一个菜单或者步骤。
