--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -99,3 +99,7 @@ button.addActionListener(new ActionListener() {
 流就是流动的数据，可以对流里面的数据进行映射，筛选，收集等，流有一个接口, java.util.stream.Stream，这里面有很多的方法，包括map，filter等，还有一个收集方法collect，所有的方法可以分为两类，一是惰性求值方法，包括filter，map，flatMap等，二是及早求值方法，包括count，collect等
 
 流属于集合的内部迭代，是产生结果的一个菜单或者步骤。
+
+## java 8的comparator接口有变化么？
+
+有，新增了很多方法，以前只有compare方法和equals方法，现在多出来很多和函数有关的方法，同时该接口也变成了函数式接口了。
