docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -25,3 +25,12 @@ Scala的核心数据包含
 
 数值范围由低高到，从上到下，范围低的可以赋值给范围高的，反之不可以，除非调用对应的toType方法，toType的意思是toInt toByte toShort而且这些方法不用参数，也即是括号都不用写
 
+scala的方法调用有些奇葩，主要是方法的参数列表是空的时候竟然可以不写括号，比如"hello".hashcode()可以写作"hello".hashCode，很是奇葩，头一回看见这东西绝对看不懂。
+
+Scala的字符串可以用+来进行连接，也可以使用`s"$variableName"`来做字符串内插，就是把变量variableName的内容替换成字符串内容，另外`"""  """`可以构造多行字符串，里面的所有元素的都是字面量，可以不用转义。
+
+Scala里面，主要分值类型和引用类型，所有类型的最顶级类型是Any，类似于Java里面的Object，是所有的类型的直接或间接父类。而Null是所有引用类型的子类型，用于表示一个空的类型。而Nothing是所有其他类型的子类型，包括Null，它的存在主要是为那些影响程序流程的操作提供一个兼容的返回值，比如return，就返回的是一个Nothing。
+
+Scala没有自动布尔值转换，也就是0不会被当做false，""也不会被当做false，这和Java一致，和c++和js不同。
+
+
