docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -33,4 +33,12 @@ Scala里面，主要分值类型和引用类型，所有类型的最顶级类型
 
 Scala没有自动布尔值转换，也就是0不会被当做false，""也不会被当做false，这和Java一致，和c++和js不同。
 
+Scala里面，有一些通用的方法
 
+* hashCode 同Java的hashCode
+* toString 同Java的toString
+* asInstanceof[<Type>] 强制类型转换
+* to<Type> 类型转换
+* inInstanceOf 同Java instanceof 关键字
+
+Scala里面可以好多个值放到一起，组成逻辑上的一个值，叫做元组，比如（5， ”jsy", 22)就是一个元组，主要是逻辑上的一个值，可以用`->`来快速创建有两个元素的元组，元组中元素的访问时通过索引访问的。
