docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -42,3 +42,9 @@ Scala里面，有一些通用的方法
 * inInstanceOf 同Java instanceof 关键字
 
 Scala里面可以好多个值放到一起，组成逻辑上的一个值，叫做元组，比如（5， ”jsy", 22)就是一个元组，主要是逻辑上的一个值，可以用`->`来快速创建有两个元素的元组，元组中元素的访问时通过索引访问的。
+
+**元组的演示**
+
+val tuple = "name" -> "jsy"
+
+print(tuple._1) // 访问tuple的第一个元素，注意元组的索引是从1开始的，而且表示的是_1而不是[1] (1)
