docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -48,3 +48,20 @@ Scala里面可以好多个值放到一起，组成逻辑上的一个值，叫做
 val tuple = "name" -> "jsy"
 
 print(tuple._1) // 访问tuple的第一个元素，注意元组的索引是从1开始的，而且表示的是_1而不是[1] (1)
+
+Scala的match语句就是java里面的switch语句，if语句也类似，这些语句竟然可以在后面跟着的表达式块里面执行多条表达式或者语句，并且以最后一个值作为返回，这简直是很棒棒啊。
+
+```scala
+var value = (3 > 2) match {
+  case true => {
+    println("3 > 2")
+    true
+  }
+
+  case other => {
+    false
+  }
+}
+```
+
+而且还不用写分号，这也很不错，我欣赏。
