docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -5,8 +5,8 @@
 Scala的核心数据包含
 
 * 字面量，比如"hello world", 4, 'C'这些字面表示的数据
-* 值（常量），用val修饰的不可变的常量，声明方式为 val <Name>[:<Type>] = "value"
-* 变量，用var修饰的可变的量，声明方式为 var <Name>[:<Type>] = "value"
+* 值（常量），用val修饰的不可变的常量，声明方式为 `val <Name>[:<Type>] = "value"`
+* 变量，用var修饰的可变的量，声明方式为 `var <Name>[:<Type>] = "value"`
 
 <> 里的内容是可变的, []里面的内容是可选的。
 
@@ -29,7 +29,7 @@ scala的方法调用有些奇葩，主要是方法的参数列表是空的时候
 
 Scala的字符串可以用+来进行连接，也可以使用`s"$variableName"`来做字符串内插，就是把变量variableName的内容替换成字符串内容，另外`"""  """`可以构造多行字符串，里面的所有元素的都是字面量，可以不用转义。
 
-Scala里面，主要分值类型和引用类型，所有类型的最顶级类型是Any，类似于Java里面的Object，是所有的类型的直接或间接父类。而Null是所有引用类型的子类型，用于表示一个空的类型。而Nothing是所有其他类型的子类型，包括Null，它的存在主要是为那些影响程序流程的操作提供一个兼容的返回值，比如return，就返回的是一个Nothing。
+Scala里面，主要分值类型和引用类型，所有类型的最顶级类型是Any，类似于Java里面的Object，是所有的类型的直接或间接父类。而Null是所有引用类型的子类型，用于表示一个空的类型。而Nothing是所有其他类型的子类型，包括Null，它的存在主要是为那些影响程序流程的操作提供一个兼容的返回值，比如一个单独的return，就返回的是一个Nothing。
 
 Scala没有自动布尔值转换，也就是0不会被当做false，""也不会被当做false，这和Java一致，和c++和js不同。
 
@@ -37,18 +37,18 @@ Scala里面，有一些通用的方法
 
 * hashCode 同Java的hashCode
 * toString 同Java的toString
-* asInstanceof[<Type>] 强制类型转换
-* to<Type> 类型转换
+* `asInstanceof[<Type>]` 强制类型转换
+* `to<Type>` 类型转换
 * inInstanceOf 同Java instanceof 关键字
 
 Scala里面可以好多个值放到一起，组成逻辑上的一个值，叫做元组，比如（5， ”jsy", 22)就是一个元组，主要是逻辑上的一个值，可以用`->`来快速创建有两个元素的元组，元组中元素的访问时通过索引访问的。
 
 **元组的演示**
-
+```scala
 val tuple = "name" -> "jsy"
 
 print(tuple._1) // 访问tuple的第一个元素，注意元组的索引是从1开始的，而且表示的是_1而不是[1] (1)
-
+```
 Scala的match语句就是java里面的switch语句，if语句也类似，这些语句竟然可以在后面跟着的表达式块里面执行多条表达式或者语句，并且以最后一个值作为返回，这简直是很棒棒啊。
 
 ```scala
@@ -65,3 +65,28 @@ var value = (3 > 2) match {
 ```
 
 而且还不用写分号，这也很不错，我欣赏。
+
+Scala里面的函数的定义大致是`def <标识符>:<返回类型> = <表达式>`，一个比较复杂的函数定义如下
+
+```scala
+def myFunc(name: String, prefix: String = "Dear Mr/Mrs/Ms"): Unit = {
+  println(s"Hello $prefix $name")
+}
+```
+
+prefix这样的是默认参数，边声明边赋一个默认值，调用的时候可以不用传这个值，Unit是这个函数的返回值类型。
+
+这个函数和Java的不同就是，它有一个等号，而且返回类型是写在后面，而且默认参数也是没有的，这个在java里面会使用重载来实现。同时Scala定义一个函数需要用一个def关键字，这看起来像Python定义函数的风格。
+
+Scala函数的调用也很不一样，比如代码里面定义的函数可以通过下面的几个方式来调用
+
+```scala
+// 最像Java的，小括号里面放参数，由于第二个参数是默认值，所以可以这么干
+myFunc("Fox")
+// 挑明Fox是形参里面的name，这叫做用命名参数调用函数
+myFunc(name = "Fox")
+// 下面的叫做表达式块调用函数，主要是在调用函数的时候做点其他的事情，比如下面的println
+// 最后的Fox才是给myFunc的真正的参数
+// 但是这种操作只适用于只需要传递一个参数的函数，其余情况不适用
+myFunc{println "Hello world."; "Fox"}
+```
