docs: udpate 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -90,3 +90,14 @@ myFunc(name = "Fox")
 // 但是这种操作只适用于只需要传递一个参数的函数，其余情况不适用
 myFunc{println "Hello world."; "Fox"}
 ```
+
+Scala还可以在函数里面定义函数，然后在里面使用定义的函数，即使这个函数和外面的函数重名也无所谓，因为里面定义的函数有最高的优先级，比如一个求三个数的最大值的函数
+
+```scala
+def maxOfThree(a: Int, b: Int, c: Int): Int = {
+  def max(a: Int, b: Int): Int = if (a > b) a else b
+  max(a, max(b, c))
+}
+
+val res: Int = maxOfThree(1, 2, 3) // 3
+```
