docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -101,3 +101,16 @@ def maxOfThree(a: Int, b: Int, c: Int): Int = {
 
 val res: Int = maxOfThree(1, 2, 3) // 3
 ```
+
+Scala的函数也支持Java一样的可变参数，不过写法上有所不同
+
+```scala
+def func(name: String, data: Int*): Unit = {
+  for (t <- data) println(s"$name $t")
+}
+
+func("arr", 1, 2, 3)
+// arr 1
+// arr 2
+// arr 3
+```
