docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -148,3 +148,15 @@ val func2: Int => Int = func1
 ```scala
 val func3 = func1 _
 ```
+
+Scala的函数字面量或者说lambda表达式，是一个很有趣的语法。示例如下
+```scala
+var func4 = (a: Int, b: Int): Int => {
+  var c = a + b
+  c
+}
+```
+
+func4右边的就是一个函数字面量，它表示了自己是一个接收两个整形参数，返回两者之和的一个函数。直接将一个函数字面量赋值给一个值，这是没有问题的，其实和先定义一个函数，再把这个函数赋值给func4一样的，但是直接使用字面量的方法，免去了给func4写函数类型的麻烦。
+
+
