docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -159,4 +159,31 @@ var func4 = (a: Int, b: Int): Int => {
 
 func4右边的就是一个函数字面量，它表示了自己是一个接收两个整形参数，返回两者之和的一个函数。直接将一个函数字面量赋值给一个值，这是没有问题的，其实和先定义一个函数，再把这个函数赋值给func4一样的，但是直接使用字面量的方法，免去了给func4写函数类型的麻烦。
 
+函数字面量也存在占位符的说法，它主要在以下情况使用
 
+1. 函数的显式类型在字面量之外指定
+2. 参数最多使用一次
+
+也就是说，字面量的描述早就已经写好了，并且字面量函数体里面最多使用一个参数一次
+
+这种使用占位符同时可以省略参数列表，使函数字面量更加简洁
+
+比如下面的
+```scala
+// func5接收一个整数a和一个类型为Int => Int的函数
+def func5(a: Int, double: Int => Int) = double(a)
+
+// 显式写明函数字面量，此时还要写参数类表
+func5(3, (a: Int) => a * 2)
+
+// 显式写明函数字面量，去掉参数列表的类型
+// 因为func5的声明就已经说了参数的输入是Int
+// 另外只有一个输入参数，所以可以不写参数列表的小括号
+func5(3, a => a * 2)
+
+// 使用占位符，不写参数列表
+// 这个占位符就代表参数列表里面的第一个参数
+func5(3, _ * 2)
+```
+
+可以同时使用多个占位符，按照出现顺序，分别代表第一个，第二个...参数
