docs: update 01-git基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -187,3 +187,19 @@ func5(3, _ * 2)
 ```
 
 可以同时使用多个占位符，按照出现顺序，分别代表第一个，第二个...参数
+
+比如下面的
+```scala
+// 函数定义，接收两个整型数a b和一个函数
+def func6(a: Int, b: Int, by: (Int, Int) => Int) = by(a, b)
+
+// 函数字面量，同时声明参数列表和类型
+func6(3, 4, (a: Int, b: Int) => a * b)
+
+// 由于func6已经说明了函数字面量中的参数类型，所以可以不写
+func6(3, 4, (a, b) => a * b)
+
+// 使用占位符，直接去掉参数类表
+// 第一个_代表a，第二个_代表b
+func6(3, 4, _ * _)
+```
