docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -222,3 +222,85 @@ val d = func2(3) _
 // 应用第二个参数表
 d(4) // 7
 ```
+
+scala全面兼容Java的集合框架，但是Scala也提供了自己的集合类，比如List Map等
+
+Scala中的List是不可变的，也就是说，向列表里面添加一个元素后，返回的列表是一个新的列表，不是原来的列表了，这个和Java的List不同，反而是更像Java里面的String，比如 "a" + "b"之后就是一个全新的字符串"ab"了。
+
+```scala
+scala> val list = List(1, 2, 3)
+list: List[Int] = List(1, 2, 3)
+
+scala> list.head
+res23: Int = 1
+
+scala> list.tail
+res24: List[Int] = List(2, 3)
+
+scala> var i = list
+i: List[Int] = List(1, 2, 3)
+
+scala> while (i != Nil) {println(i.head); i = i.tail}
+1
+2
+3
+```
+注意head是列表头元素，tail则是除去列表头置为的其他所有元素，也就是集合，一个List的末尾是Nil，它是List[Nothing]的一个单例实例，可以用于判断一个列表是不是空的。
+
+List有一些算术运算，例举如下
+```scala
+::将新元素放到已有List的前面，返回新的List
+scala> var l = 1::2::3::Nil
+l: List[Int] = List(1, 2, 3)
+
+::: 将一个List放到另一个List的前面，返回新的List
+scala> var p = 0::Nil:::l
+p: List[Int] = List(0, 1, 2, 3)
+
+++ 将两个List连接成新的List
+scala> l ++ p
+res27: List[Int] = List(1, 2, 3, 0, 1, 2, 3)
+
+== 判等
+scala> l == p
+res28: Boolean = false
+
+.distinct去重
+scala> (l ++ p).distinct
+res29: List[Int] = List(1, 2, 3, 0)
+
+drop 去掉前n个元素，返回新列表
+scala> (l ++ p) drop 2
+res30: List[Int] = List(3, 0, 1, 2, 3)
+
+filter，高阶函数过滤
+scala> (l ++ p) filter( _ > 2)
+res31: List[Int] = List(3, 3)
+
+flatten将两个列表整合到一起
+scala> List(1::2::Nil, 3::4::Nil).flatten
+res32: List[Int] = List(1, 2, 3, 4)
+
+partition分区
+scala> 1::2::3::Nil partition(_ < 2)
+res33: (List[Int], List[Int]) = (List(1),List(2, 3))
+
+reverse逆序
+scala> 1::2::3::Nil.reverse
+res34: List[Int] = List(1, 2, 3)
+
+scala> (1::2::3::Nil).reverse
+res35: List[Int] = List(3, 2, 1)
+
+take取前n个元素
+scala> (1::2::3::Nil) take 2
+res36: List[Int] = List(1, 2)
+
+zip 新元组
+scala> 1::2::Nil zip "Hello"::"World"::Nil
+res37: List[(Int, String)] = List((1,Hello), (2,World))
+
+splitAt在某处分割
+scala> 1::2::3::4::Nil splitAt 2
+res38: (List[Int], List[Int]) = (List(1, 2),List(3, 4))
+```
