docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -114,3 +114,10 @@ func("arr", 1, 2, 3)
 // arr 2
 // arr 3
 ```
+
+编写可读函数的要求如下
+
+1. 函数应该尽量简短，命名适当且含义明确，把复杂的函数拆解为简单的函数，应当不超过标准的一页纸的高度，比如40行
+2. 要使用能充分体现函数作用的名字，能清除的看出这个函数要完成什么工作。
+
+
