docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -120,4 +120,31 @@ func("arr", 1, 2, 3)
 1. 函数应该尽量简短，命名适当且含义明确，把复杂的函数拆解为简单的函数，应当不超过标准的一页纸的高度，比如40行
 2. 要使用能充分体现函数作用的名字，能清除的看出这个函数要完成什么工作。
 
+函数是有类型的，其实就是输入和输出确定函数的类型，比如 `(Int, String) => String`，箭头前面的是输入类型，也就是参数列表的类型，箭头后面就是返回类型。当参数列表只有一个成员的时候，可以把小括号给去除掉。
 
+什么时候会用到函数类型？
+
+平常定义一个函数的时候的代码是下面这样的
+```scala
+def func(a: Int, b: String): String = {
+  a + b
+}
+```
+
+这里函数的类型直接从参数列表和返回类型就可以看出来了，如果没有返回类型，你可以不写返回类型，或者写返回类型为`: Unit`，或者让编译器来推测。
+
+函数类型其实是在你将一个函数赋给一个值（val）的时候才会用到的，这个函数类型说明这个值是一个函数。比如下面
+
+```scala
+def func1(a: Int): Int = {
+  a * 2
+}
+val func2: Int => Int = func1
+```
+
+上面就是将一个函数赋值给另外一个值或者一个变量，而且这个值必须说明自己是一个函数类型，就是通过给自己一个函数类型来说明自己是一个函数的。
+
+如果这个值不想写函数类型，可以用占位符来匹配
+```scala
+val func3 = func1 _
+```
