docs: update 01-基础.md

--- a/scala/01-基础.md
+++ b/scala/01-基础.md
@@ -203,3 +203,22 @@ func6(3, 4, (a, b) => a * b)
 // 第一个_代表a，第二个_代表b
 func6(3, 4, _ * _)
 ```
+
+Scala可以部分应用函数，比如先应用其中一个参数，然后在第二步的时候去应用其他参数。
+
+```scala
+// 第一种部分应用函数的操作，采用的是占位符
+// 但是这种占位符需要显示的说明占位符参数类型
+// 第二种就不用
+def func(a: Int, b: Int): Int = a + b
+val c = func(3, _: Int)
+c(4) // 7
+
+// 这是第二种部分应用函数的操作，这种操作看起来更像是一个函数链
+// func2有两个参数表
+def func2(a: Int)(b: Int): Int = a + b
+// 应用第一个参数表，也要用到占位符，但是不用说明参数类型
+val d = func2(3) _
+// 应用第二个参数表
+d(4) // 7
+```
