docs: update 10-零散知识.md

--- a/bash/10-零散知识.md
+++ b/bash/10-零散知识.md
@@ -50,3 +50,36 @@ Access: 2019-07-10 15:42:02.197308775 +0800
 Modify: 2019-02-25 04:00:42.000000000 +0800
 Change: 2019-05-14 00:53:06.590758426 +0800
 
+* 查看本机内网IP
+
+最基础的操作就是ip addr，ifconfig等命令，然后利用grep sed awk等文本处理来提取IP地址。
+
+```bash
+# 利用hostname -i获取本机ip
+[jsy@vm ~]$ hostname -i
+172.16.10.99
+
+# 利用ifconfig或者ip addr的输出信息
+
+[jsy@vm foo]$ ifconfig | grep inet | grep -ve 'inet6\|[[:space:]]127' | awk '{print $2}' | cut -d '/' -f 1
+172.16.10.99
+
+#3 利用ip addr的信息
+[jsy@vm foo]$ ip addr | grep 'state UP' -A2 | tail -n 1 | awk '{print $2}' | cut -d '/' -f 1
+172.16.10.99
+```
+* 查看本机外网IP
+
+查看外网ip需要请求外部站点获取ip地址，参考了[233boy的脚本里面的api](https://github.com/233boy/v2ray/blob/dev/install.sh)
+```
+[jsy@vm foo]$ curl --ipv4 --silent https://api.ip.sb/ip
+118.112.177.119
+[jsy@vm foo]$ curl --ipv4 --silent https://api.ipify.org
+118.112.177.119[jsy@vm foo]$
+[jsy@vm foo]$ curl --ipv4 --silent https://ip.seeip.org
+118.112.177.119
+[jsy@vm foo]$ curl --ipv4 --silent https://ifconfig.co/ip
+118.112.177.119
+[jsy@vm foo]$ curl --ipv4 --silent https://icanhazip.com
+118.112.177.119
+```
