docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -103,3 +103,43 @@ button.addActionListener(new ActionListener() {
 ## java 8的comparator接口有变化么？
 
 有，新增了很多方法，以前只有compare方法和equals方法，现在多出来很多和函数有关的方法，同时该接口也变成了函数式接口了。
+
+## Java的继承
+
+Java子类继承不到父类的私有方法,所以没法对其进行重写也就是Override,而且也无法通过super来调用到父类的私有方法,但是可以通过中间层搭桥来间接调用父类的私有方法,那就是在父类中定义一个public的方法,在这个方法里面调用父类的私有方法,举例如下
+
+```java
+package com.jsycdut.foo;
+
+/**
+ * Hello world!
+ *
+ */
+public class App 
+{
+    public static void main( String[] args )
+    {
+        System.out.println( "Hello World!" );
+        new Father().print(); // Father
+        new Son().print(); // Father, 这里间接调用到了父类的私有方法getInfo
+    }
+}
+
+class Father {
+    public void print() {
+        System.out.println(getInfo());
+    }
+
+    private String getInfo() {
+        return "Father";
+    }
+}
+
+class Son extends Father {
+
+    private String getInfo() {
+        return "Son";
+    }
+}
+
+```
