docs: update 4-对象

--- a/js/4-对象.md
+++ b/js/4-对象.md
@@ -21,4 +21,33 @@ var obj = {
 关于对象属性的读取，我是吃过大亏的，这个明天再写。
 * [属性的读取](https://wangdoc.com/javascript/types/object.html)
 
+## Js的异常
 
+Error代表js里面的异常，是所有其他异常的父类，其下有6种子类
+
+* RangeError 数字范围出错
+* ReferenceError 引用不存在导致出错
+* SyntaxError 语法错误，比如括号不匹配，写错关键字等
+* TypeError 类型错误，往往出现在调用对象不存在的方法
+* URIError URI错误，往往出现在处理URI这种包含%的数据时候
+* EvalError 调用eval方法的时候出现的错误
+
+js 异常处理代码模板
+
+```javascript
+function f() {
+  try {
+    throw new ReferenceError("NOT EXIST");
+  }catch(exception) {
+    if (exception instanceof RangeError) {
+      console.log("RangeError detected");
+    } else if (exception instanceof ReferenceError) {
+      console.log("ReferenceError detected");
+    } else {
+      console.log("other type of exceptions");
+    }
+  } finally {
+      console.log("finally code block");
+  }
+}
+```
