docs: update 01-单例模式.md

--- a/design-pattern/01-单例模式.md
+++ b/design-pattern/01-单例模式.md
@@ -71,6 +71,8 @@ public class Singleton {
 ```java
 public class Singleton {
   // 注意volatile，该关键字确保所有线程都能正确读取instance的状态
+  // 为什么要加volatile？
+  // volatile有两个关键作用，一是禁止指令重排，二是保证内存可见性
   private static volatile Singleton instance;
 
   private Singleton() {}
