docs: update 01-单例模式.md

--- a/design-pattern/01-单例模式.md
+++ b/design-pattern/01-单例模式.md
@@ -16,7 +16,7 @@
 
 假设现在没有Singleton的实例，需要创建一个，如果创建实例的方法不是static的，就需要用已有的Singleton实例来调用非static的创建实例的方法，然而此时又没有实例，所以实例提供方法必须是static的。
 
-3. Singleton提供的实例必须是static修饰的
+3. Singleton提供的实例必须是private static修饰的
 
 实例提供方法是static的，static的方法只能访问static的变量，所以实例必须是static的。
 
@@ -24,7 +24,7 @@
 
 单例的实现方式众多，典型的有饿汉式单例、懒汉式单例、双重检查锁、静态内部类式以及枚举式单例。
 
-### 饿汉式单例
+### 饿汉式单例 线程安全
 
 称为饿汉，是因为该实例在类加载的时候，其静态成员instance就被初始化了，不管之后getInstance方法被调用与否，这个实例都存在了，本写法的优点是简单，缺点是可能存在资源浪费，比如getInstance从没被调用过，这个实例就算是白创建了。
 
@@ -54,7 +54,8 @@ public class Singleton {
   private Singleton() {}
 
   // synchronized确保多线程安全
-  public static synchronized Singleton getInstance() { // 多个线程同时访问这里，会大家一起卡在这里，性能堪忧
+  // 多个线程同时访问这里，会大家一起卡在这里
+  public static synchronized Singleton getInstance() { 
     if (instance == null) {
       instance = new Singleton();
     }
@@ -70,18 +71,20 @@ public class Singleton {
 
 ```java
 public class Singleton {
-  // 注意volatile，该关键字确保所有线程都能正确读取instance的状态
   // 为什么要加volatile？
   // volatile有两个关键作用，一是禁止指令重排，二是保证内存可见性
+  // 这里主要是禁止指令重排，因为new操作不是原子的。
+  // 不用volatile可能会导致NPE
+  // synchronized关键字可以保证内存可见性
   private static volatile Singleton instance;
 
   private Singleton() {}
 
   public static Singleton getInstance() {
     if (instance == null) {
-      synchronized (Singleton.class) { // 还是有锁，只不过锁的不是方法，性能也好不到哪里去
-        if (instance == null) { // 此处能正确访问到instance的状态，需要归功于volatile关键字
-          instance = new Singleton();
+      synchronized (Singleton.class) { // synchronized关键字
+        if (instance == null) {
+          instance = new Singleton(); // new 不是原子操作
         }
       }
     }
@@ -287,4 +290,22 @@ enum EnumSingleton {
     }
 }
 
+```
+
+## jdk中的单例
+来看看jdk中的单例模式，java.lang.Runtime类就是用了单例模式为Java程序提供了一个运行时单例。
+
+```java
+public class Runtime {
+  // 恶汉式单例
+  private static Runtime currentRuntime = new Runtime();
+
+  private Runtime() {}
+
+  public static Runtime getRuntime() {
+    return this.currentRuntime;
+  }
+
+  // other functions...
+}
 ```
