docs: update 零散知识

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -150,5 +150,5 @@ class Son extends Father {
 
 * java.io.Serializable 标识着实现本接口的类是可序列化的
 * java.util.RandomAccess 用于List接口的实现类，表明其拥有常量时间的随机存取能力
-* java.lang.Cloneable 标识着实现本接口的类可以使用clone()，也就是可以复制本对象
+* java.lang.Cloneable 标识着实现本接口的类可以使用clone()，也就是可以复制本对象，记得重写Object类的clone方法
 * java.rmi.Remote 标识着实现本接口的类中的声明的方法可能被远程调用
