docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -167,3 +167,18 @@ class Son extends Father {
 关于Java的并发，也包含了`线程通信和线程同步两部分内容`，其中线程通信采用的是共享内存，线程同步采用的是锁机制来完成的。
 
 
+## PECS
+
+Producer extends, Consumer super.即所谓的生产者使用extends关键字，消费者使用super关键字。
+
+该原则用于特定条件的情形，涉及到`集合、通配符？`。
+
+在集合中，如果只想向其中塞入元素，而不考虑从其中读取，就需要将该集合视为Consumer，如果只想从集合中读取元素，而不考虑向其中塞入元素，应该将该集合视为生产者。在此情况下，需要在声明该集合的时候使用类型通配符`？`和`extends super`两个关键字之一，其中生产者使用`extends`，消费者使用`super`，这就是所谓的PECS.
+
+参考资料
+
+* [Java Generics PECS – Producer Extends Consumer Super](https://howtodoinjava.com/java/generics/java-generics-what-is-pecs-producer-extends-consumer-super/)
+
+* [Top 40 Java collection interview questions and answers](https://howtodoinjava.com/java/collections/useful-java-collection-interview-questions/)
+
+* [【Java】泛型中 extends 和 super 的区别？](https://itimetraveler.github.io/2016/12/27/%E3%80%90Java%E3%80%91%E6%B3%9B%E5%9E%8B%E4%B8%AD%20extends%20%E5%92%8C%20super%20%E7%9A%84%E5%8C%BA%E5%88%AB%EF%BC%9F/)
