docs: update 零散知识.md

--- a/thinking-in-java/零散知识.md
+++ b/thinking-in-java/零散知识.md
@@ -152,3 +152,18 @@ class Son extends Father {
 * java.util.RandomAccess 用于List接口的实现类，表明其拥有常量时间的随机存取能力
 * java.lang.Cloneable 标识着实现本接口的类可以使用clone()，也就是可以复制本对象，记得重写Object类的clone方法
 * java.rmi.Remote 标识着实现本接口的类中的声明的方法可能被远程调用
+
+## Java并发
+
+并发(不仅仅是Java并发)，也就是所谓的多线程编程，涉及到两部分内容
+
+1. 线程通信
+2. 线程同步
+
+线程通信包含两种类型
+1. 共享内存
+2. 消息传递
+
+关于Java的并发，也包含了`线程通信和线程同步两部分内容`，其中线程通信采用的是共享内存，线程同步采用的是锁机制来完成的。
+
+
