--- a/latex/Paxos-Raft-Zabs选主调研文档.tex
+++ b/latex/Paxos-Raft-Zabs选主调研文档.tex
@@ -5,6 +5,7 @@
 \usepackage{abstract}
 \usepackage{tikz}
 \usepackage{hyperref}
+\usepackage{graphicx}
 \usetikzlibrary{graphs}
 \usetikzlibrary{arrows, patterns, positioning}
 
@@ -82,7 +83,7 @@ Paxos算法有两个确保共识的要求（论文中表述为三个，但是其
 				\item 如果一个<n, v>的提议被最终选中，那么每个被proposer发布的且编号大于n的提议的值必须是v
 			\end{enumerate}
 		\item 系统中的请求分为两类，分别是prepare请求和accept请求两种，都由proposer提出，前者用于发出自己提议的值，后者用于当自己提议的值被大多数acceptor接收时再次请求接收自己的值（因为可能有多个proposer的prepare请求被通过，accept相当于二次确认）
-		\item 一个acceptor当接收到prepare请求时，如果没有接收到大于该请求序号的其他请求，那么久接受该prepare请求，并响应其之前接收到的最大的prepare请求的值，并且承诺，不接受其他请求序号小于当前接受请求序号的prepare请求
+		\item 一个acceptor当接收到prepare请求时，如果没有接收到大于该请求序号的其他请求，那么就接受该prepare请求，并响应其之前接收到的最大的prepare请求的值，并且承诺，不接受其他请求序号小于当前接受请求序号的prepare请求
 	\end{enumerate}
 
 整个算法大致可以用两个阶段来进行描述，分别是
@@ -97,11 +98,92 @@ Paxos算法有两个确保共识的要求（论文中表述为三个，但是其
 	\item 如果一个接收到自己之前发送的编号为n的prepare请求的响应并且这些响应来自大多数的acceptor，那么就向大多数的acceptor发送编号为n，值为自己接收到的响应中的最大的值的accept请求。
         \item 如果一个acceptor接收到了一个编号为n的accept请求，那么就需要接受该请求的值，除非自己又接收到了编号大于n的prepare请求。
         \end{enumerate}
+
+
+\textit{常见例子}
+
+在网上很多关于Paxos算法的文章中，都引用了下面的例子。
+
+\begin{figure}[hb]
+	\centering
+	\includegraphics[scale=0.5]{1.png}
+	\caption{proposer A和B都分别向三个Acceptor发送了prepare请求}
+	\label{fig:label}
+\end{figure}
+
+在图1中，proposer A和B分别向Acceptor X、Y和Z发起了自己的提议，其中，proposer A的prepare请求为[n=2, v=8]，proposer B的prepare请求为[n=4, v=5]，而且Acceptor X、Y先接收到Proposer A和B的prepare请求，Acceptor Z则是先接收到proposer B的请求。出于算法的规则，Acceptor最先接收到的这三个请求是必须被接受的。
+
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[scale=0.5]{2.png}
+	\caption{Acceptor对首次接收到的请求的回应}
+	\label{fig:label}
+\end{figure}
+图2显示了acceptor对接收到的最先到达的prepare request的响应过程，Acceptor X和Y都先接收到了来自Proposer A的[n=2, v=8]的prepare request，在这之前它们没有接收到任何prepare request，所以必须接收本次接收到的请求，并向proposer回复一个prepare response，回复内容为[no previous]，代表着之前没有接收到prepare request。并且承诺，不再响应序号小于2的prepare request请求。Acceptor C同理，回复[no previous]的prepare response，同时承诺不响应序号小于4的prepare request。
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{3.png}
+	\caption{Acceptor对非首次prepare请求进行回应}
+	\label{fig:label}
+\end{figure}
+
+图3显示了acceptor对后续到达的prepare request的响应过程。对Acceptor X而言，对后续到达的来自proposer B的[n=4, v=5]的请求，由于序号大于之前接受的序号为2的来自proposer A的prepare request中的序号，所以接收本次prepare request，并且将之前接受的prepare request内容作为prepare response返回给proposer B，并且承诺以后不响应序号小于4的请求，Acceptor Y同理，但是对于Acceptor C而言，后续到达的来自proposer A的[n=2, v=8]的请求由于序号2小于之前接收到的来自proposer B的[n=4, v=5]的prepare request中的序号，所以对此请求不予理会。
+
+注意，在这个例子中，此时所有的acceptor都做出了一个承诺，不接受序号小于4的请求。
+
+至此，所有Acceptor对所有Proposer提出的prepare request请求处理完毕，Proposer A总共收到了2次prepare response响应，B同理，都得到了3个Acceptor中的大部分响应（同意），所以Proposer A和B都将会发起下一次的accept request请求，再次确认自己的值被接受。注意，在发起accept request时，其请求序号和之前的prepare request序号一致，但是对应的值却是选自己之前接收到的prepare response中的值中的最大者，如果prepare response是[no previous]，那么在accept request中的值就是prepare request中的值。
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{4.png}
+	\caption{Proposer B发起accept request}
+	\label{fig:label}
+\end{figure}
+
+图4中只画出了Proposer B发起的accept request请求，并没有画出Proposer A的accept请求，这不是说Proposer A没有发起，而是它虽然发起了，但是被所有的Acceptor抛弃了，这是因为，在之前所有acceptor处理prepare request请求的时候，都承诺了不响应请求序号小于4的请求，所以Proposer的请求都被抛弃了。另外，Proposer的accept请求是[n=4, v=8]，而不是原来自己发起prepare request的[n=4, v=5]，这是因为在发送accept request时，取值是自己收到的prepare response中的最大值，也就是prepare request[n=2, v=8]中的8。
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{5.png}
+	\caption{Learner获取最终接受的提议值}
+	\label{fig:label}
+\end{figure}
+
+当acceptor接收到的accept request请求的序号大于等于自己承诺接受的最小序号，在本例中为4，那么就告知所有的learner，自己接受了某个值，在本例中是8，当所有learner发现了大多数的acceptor都接受了某个值，那么该值就是最终的达成共识的值，也就是8，如图5所示。
+
+注意的是，learner可以有多个，在本例子涉及的图中，只画出了一个learner。
+
+
 \subsection{Raft}
 
 Raft一般指由斯坦福大学的Diego Ongaro和 John Ousterhout在2014年发表的博士论文《In Search of an Understandable Consensus Algorithm》中提出的分布式系统共识算法。
 
 该论文主要包括主节点选举和日志复制两部分，其中和我们分布式图计算有关的是主节点选举。
+
+在Raft的主节点选举中，主要包含两个时间度量，分别是心跳时间和选举时间。另外每个节点至少有3个状态，分别是Follower（从节点），Candidate（主节点候选人），Leader（主节点）。
+
+对于任意Follower节点而言，如果没有在心跳时间内接收到来自Leader的心跳消息，那么就认为此时Leader节点已经下线（可能是Leader节点已关闭或者被网络隔离开），此时将等待一个150ms～300ms的随机选举时间，将自己的状态提升到Candidate，当状态提升完成后，就向集群中所有的节点发起投票请求，请求自己成为新的Leader，如果该请求得到了来自集群大多数（一半以上）的同意，那么自己就成为集群新的Leader，并间隔一定时间向所有的其他节点发送心跳消息，以维持自己的Leader身份。
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{r1.png}
+	\caption{Node B最先进入Candidate状态}
+	\label{fig:label}
+\end{figure}
+
+图6中有三个Raft节点，其中Node B拥有最小的选举时间，这意味着它最快进入Candidate状态，然后Node B向Node A和Node C发送选举请求，由于Node B和Node C都没有对其他主节点候选人投票，所以都将票投给Node B，同时Node B也给自己投票，因此Node B最后拥有3票投票，也就是得到了集群大多数节点（一半及以上）的同意，因此Node B成为主节点，之后它将定时向其他所有顶点发送心跳信息，以维持自己的主节点身份。
+
+整体来看，Raft的选主算法相当简单明了，不用像Paxos那样要发多次的请求，但是Raft算法仍然有许多细节需要注意。
+
+\textbf{每个Candidate的投票请求需要包含哪些凭据？}
+
+\textbf{Follower节点如何判断一个投票请求是否值得投票？}
+
+
 
 \subsection{Zab}
 
