docs: update presentation.tex

--- a/latex/presentation.tex
+++ b/latex/presentation.tex
@@ -17,19 +17,17 @@
   \begin{frame}
     %\frametitle{substitute this with your title}
       \begin{columns}
-         \column{0.8\textwidth}
-       \includegraphics[scale=0.40,height=\textheight]{../../photos/bar/cat-selfie-2.jpg}
-       \column{0.2\textwidth}
-       \textbf{OK!} \textit{看看我们帅气的组员们吧！}
+         \column{0.98\textwidth}
+       \includegraphics[width=\textwidth]{../../photos/bar/cat-selfie-2.jpg}
+        \column{0.16\textwidth} OK!让我们组先来一个帅气的自拍！
       \end{columns}
   \end{frame}
   \begin{frame}
     %\frametitle{substitute this with your title}
       \begin{columns}
-         \column{0.8\textwidth}
-       \includegraphics[height=\textheight,width=\textwidth]{../../photos/bar/group.jpg}
-       \column{0.2\textwidth}
-       好吧！这才是真正的我们。
+         \column{0.68\textwidth}
+       \includegraphics[width=\textwidth]{../../photos/bar/group.jpg}
+       \column{0.25\textwidth} 好吧！这才是真正的我们。
       \end{columns}
   \end{frame}
 
@@ -43,26 +41,28 @@
   \end{frame}
   
   \begin{frame}
+    \frametitle{回首2019}
   \begin{columns}
-  \column{0.4\textwidth}
+  \column{0.48\textwidth}
   \includegraphics[height=0.5\textheight]{../../photos/bar/gremlin-lab-coat.png}
-  \column{0.5\textwidth}
+  \column{0.52\textwidth}
 
   \begin{itemize}
-  \item 图计算小组成立，2019.04
+  \item 图计算小组的成立，2019.04
   \end{itemize}
   \end{columns}
 
   \end{frame}
   
   \begin{frame}
+    \frametitle{回首2019}
   \begin{columns}
-  \column{0.4\textwidth}
+  \column{0.48\textwidth}
   \includegraphics[height=0.5\textheight]{../../photos/bar/commit.png}
-  \column{0.5\textwidth}
+  \column{0.52\textwidth}
 
   \begin{itemize}
-  \item 图计算小组成立，2019.04
+  \item 图计算小组的成立，2019.04
   \item 从无到有的图计算，2019.06
   \end{itemize}
   \end{columns}
@@ -70,13 +70,14 @@
 
 
   \begin{frame}
+    \frametitle{回首2019}
   \begin{columns}
-  \column{0.5\textwidth}
+  \column{0.48\textwidth}
   \includegraphics[width=\textwidth]{../../photos/bar/neo4j-ha.png}
-  \column{0.5\textwidth}
+  \column{0.52\textwidth}
 
   \begin{itemize}
-  \item 图计算小组成立，2019.04
+  \item 图计算小组的成立，2019.04
   \item 从无到有的图计算，2019.06
   \item 单机图计算的增强，2019.11
   \end{itemize}
@@ -86,13 +87,14 @@
 
 
   \begin{frame}
+    \frametitle{回首2019}
   \begin{columns}
-  \column{0.4\textwidth}
-  \includegraphics[height=0.65\textheight]{../../photos/gdm/tp-dis.png}
-  \column{0.5\textwidth}
+  \column{0.48\textwidth}
+  \includegraphics[height=0.7\textheight]{../../photos/gdm/tp-dis.png}
+  \column{0.52\textwidth}
 
   \begin{itemize}
-  \item 图计算小组成立，2019.04
+  \item 图计算小组的成立，2019.04
   \item 从无到有的图计算，2019.06
   \item 单机图计算的增强，2019.11
   \item 从单机走向分布式，2019.12
@@ -102,18 +104,40 @@
   \end{frame}
 
   \begin{frame}
+    \frametitle{回首2019}
   \begin{columns}
-  \column{0.4\textwidth}
+  \column{0.48\textwidth}
   \includegraphics[height=0.65\textheight]{../../photos/bar/raft.png}
-  \column{0.5\textwidth}
+  \column{0.52\textwidth}
 
   \begin{itemize}
-  \item 图计算小组成立，2019.04
+  \item 图计算小组的成立，2019.04
   \item 从无到有的图计算，2019.06
   \item 单机图计算的增强，2019.11
   \item 从单机走向分布式，2019.12
   \end{itemize}
   \end{columns}
 
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{回首2019}
+    在过去的一年里，我们有做的比较好的地方，也存在很多不足
+    \begin{columns}
+      \column{0.4\textwidth}
+        \includegraphics[scale=0.4]{../../photos/bar/smile.png}
+        \begin{itemize}
+          \item 严格按照计划表执行任务
+          \item 具有良好的代码调优意识
+          \item 具有较好的代码调优意识
+        \end{itemize}
+      \column{0.4\textwidth}
+        \includegraphics[scale=0.4]{../../photos/bar/cry.png}
+        \begin{itemize}
+          \item a
+          \item b
+          \item c
+        \end{itemize}
+    \end{columns}
   \end{frame}
 \end{document}
